centered the page and added some text in the paragraph

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h2>this is our first repo</h2>
     <hr>
     <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, velit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vel voluptatum culpa odio assumenda magnam omnis delectus rem tempore nisi aliquid sint, sequi voluptate minima eveniet. Culpa itaque officia odit.</p>
 </body>
 </html>
